Modify logic to delete company logo

--- a/app/views/companies/destroy_logo.js.erb
+++ b/app/views/companies/destroy_logo.js.erb
@@ -1,1 +1,1 @@
-document.querySelector(".render-logo").innerHTML = "<%= j(render 'profiles/render_logo') %>"
+document.querySelector(".render-logo").innerHTML = "<%= j(render 'companies/render_logo') %>"
