--- a/app/views/direccts/_form.html.erb
+++ b/app/views/direccts/_form.html.erb
@@ -2,5 +2,6 @@
   <%= f.input :address, label: 'Adresse'%>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
+  <%= f.input :website, label: 'Site internet' %>
   <%= f.submit 'Ajouter', class: 'btn-blue', id: "DirecctBtn" %>
 <% end %>
