--- a/app/views/direccts/_elements.html.erb
+++ b/app/views/direccts/_elements.html.erb
@@ -2,13 +2,14 @@
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
-        <div class="text-center"><%= direcct.fax %></div>
+        <div class="text-center"><%= direcct.address %></div>
       </div>
     </div>
     <div class="back">
       <div class="card-bdd-container">
-        <div class="line"><i class="fas fa-map-marker-alt"></i><%= direcct.address %></div>
+        <div class="line"><i class="fas fa-fax"></i><%= direcct.fax %></div>
         <div class="line"><i class="fas fa-phone-alt"></i><%= direcct.phone %></div>
+        <div class="line"><i class="fas fa-laptop-code"></i><%= direcct.website.present? ? direcct.website : 'site web non-renseigné' %></div>
         <div class="card-db-action">
           <%= link_to edit_direcct_path(direcct), class: "card-db-edit", target: '_blank' do %>
             <i class='fas fa-pencil-alt'></i>
