--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -2,13 +2,14 @@
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
-        <div class="text-center"><%= pension_insurance.fax %></div>
+        <div class="text-center"><%= pension_insurance.address %></div>
       </div>
     </div>
     <div class="back">
       <div class="card-bdd-container">
-        <div class="line"><i class="fas fa-map-marker-alt"></i><%= pension_insurance.address %></div>
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= pension_insurance.fax %></div>
         <div class="line"><i class="fas fa-phone-alt"></i><%= pension_insurance.phone %></div>
+        <div class="line"><i class="fas fa-laptop-code"></i></i><%= pension_insurance.website.present? ? pension_insurance.website : 'site web non renseigné' %></div>
         <div class="card-db-action">
           <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
             <i class='fas fa-pencil-alt'></i>
