--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,38 +1,49 @@
+<div class="mb-3">
+  <%= link_to "Revenir au profil", profile_path(@user), class: 'link' %>
+</div>
 <div class="row">
-  <div class="col-10 offset-1">
-    <div class="mb-3">
-      <%= link_to "Revenir au profil", profile_path(@user), class: 'link' %>
-    </div>
+  <div class=<%= @user.admin && @user == current_user ? 'col-md-6' : 'col-12' %>>
+    <h2>Mes informations</h2>
     <%= simple_form_for @user, url: profile_path(@user), html: { method: :put } do |f| %>
       <%= f.input :first_name, label: "Prénom" %>
       <%= f.input :last_name, label: "Nom de famille" %>
       <%= f.input :email, label: "Email" %>
-      <% if @user.admin %>
-        <div class="d-flex flex-column align-items-center">
-          <% if @user.company.logo.attached? %>
-            <h2>Logo de l'entreprise</h2>
-            <div class="d-flex align-items-center">
-              <%= cl_image_tag @user.company.logo.key, class: 'icon-logo mb-3' %>
-              <i class="fas fa-long-arrow-alt-right mx-4" style='font-size: 40px; display: none;'></i>
-              <img id="newLogo" width="200" class='icon-logo'>
-            </div>
-          <% end %>
-          <%= f.simple_fields_for :company, @company do |h| %>
-            <%= h.input :logo, label: false, input_html: {:onchange => "loadLogo(event)"} %>
-          <% end %>
-          <div class='btn-delete' id="removeUpload" style='dislpay: none;'></div>
-        </div>
-        <h2 class="text-center">Texte de sécurité de l'entreprise</h2>
-        <%= f.simple_fields_for :company, @company do |h| %>
-          <%= h.text_area :content_secu, class: 'tinymce' %>
-          <%= tinymce %>
-        <% end %>
-      <% end %>
-      <div class="d-flex justify-content-center my-4">
-        <%= f.submit "Valider mes modifications", class: 'btn-blue' %>
-      </div>
+      <%= f.submit "Valider mes modifications", class: 'btn-blue' %>
     <% end %>
   </div>
+
+  <% if @user.admin && @user == current_user  %>
+    <div class='col-md-6'>
+      <h2>Les informations de mon entreprise</h2>
+      <div class="d-flex flex-column">
+        <h3>Logo de l'entreprise</h3>
+        <div class="d-flex justify-content-center align-items-center render-logo">
+          <% if @user.company.logo.attached? %>
+            <div class='d-flex flex-column mb-2 align-items-center'>
+              <%= cl_image_tag @user.company.logo.key, class: 'icon-logo mb-3' %>
+              <%= link_to 'Supprimer', destroy_logo_company_path(@user.company), class: 'btn-delete', remote: true %>
+            </div>
+          <% else %>
+            <i style='font-size: 80px;'class="fas fa-question-circle mb-4"></i>
+          <% end %>
+          <i class="fas fa-long-arrow-alt-right mx-4" style='font-size: 40px; display: none;'></i>
+          <img id="newLogo" width="200" class='icon-logo'>
+        </div>
+        <div class='btn-delete' id="removeUpload" style='display: none; text-align: center; width: 100%'>Annuler</div>
+        <%= simple_form_for @user.company do |f| %>
+          <div class="d-flex justify-content-center">
+            <%= f.input :logo, label: false, input_html: {:onchange => "loadLogo(event)"} %>
+          </div>
+          <h3 class="text-center">Texte de sécurité de l'entreprise</h3>
+          <%= f.text_area :content_secu, class: 'tinymce' %>
+          <%= tinymce %>
+          <div class="d-flex justify-content-center my-4">
+            <%= f.submit "Valider mes modifications", class: 'btn-blue' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 </div>
 <script>
   const loadLogo = (event) => {
@@ -42,7 +53,6 @@
     const btnDeleteLogo = document.getElementById('removeLogo');
     // Si il exite un fichier à uploader
     if(event.target.files[0]) {
-
       arrow.style.display = 'block';
       btnCancelUpload.style.display = 'block'
       // Si l'entreprise n'a pas encore de logo le bouton n'existe pas
@@ -56,7 +66,6 @@
         loadLogo(event)
       })
       image.style.display = 'block';
-      console.log('coucou')
       return image.src = URL.createObjectURL(event.target.files[0]);
     } {
       arrow.style.display = 'none';
