--- a/app/views/regional_committees/_elements.html.erb
+++ b/app/views/regional_committees/_elements.html.erb
@@ -10,6 +10,7 @@
         <div class="line"><i class="fas fa-map-marker-alt"></i><%= regional_committee.address %></div>
         <div class="line"><i class="fas fa-phone-alt"></i><%= regional_committee.phone %></div>
         <div class="line"><i class="fas fa-fax"></i><%= regional_committee.fax %></div>
+        <div class="line"><i class="fas fa-laptop-code"></i><<%= regional_committee.website.present? ? regional_committee.website : 'site web non renseigné' %></div>
         <div class="card-db-action">
           <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
             <i class='fas fa-pencil-alt'></i>
