--- a/app/views/regional_committees/_form.html.erb
+++ b/app/views/regional_committees/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.input :address, label: 'Adresse'%>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
+  <%= f.input :website, label: 'Site internet' %>
   <%= f.submit 'Ajouter', class: 'btn-blue', id: "RegionalBtn" %>
 <% end %>
