--- a/app/views/direccts/create.js.erb
+++ b/app/views/direccts/create.js.erb
@@ -2,7 +2,7 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalDirecct").hide();
   $(".fade.modal").hide();
-  document.getElementById("new_hospital").reset();
+  document.getElementById("new_direcct").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_direcct_id")) {
     document.getElementById("ppsp_direcct_id").innerHTML = "<%= j(render 'form_field_direcct') %>";
