Handle empty db

--- a/app/views/direccts/index.html.erb
+++ b/app/views/direccts/index.html.erb
@@ -28,10 +28,15 @@
       <div class="flex-database">
         <%= render 'elements', collection: @database_page %>
       </div>
-      <div class="container-flex" style='display:none'>
+      <% if @database_page.empty? %>
+        <div class="container-flex container-db-vide">
+          Votre base de données est vide
+        </div>
+      <% end %>
+      <div class="container-flex container-db-vide" style='display:none'>
         Votre recherche n'a retourné aucun résultat
       </div>
-      <div class="container-flex" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %>>
+      <div class="container-flex container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %>>
         <%= image_tag('gif-loading.gif') %>
       </div>
     </div>
