--- a/app/views/database/_content-db.html.erb
+++ b/app/views/database/_content-db.html.erb
@@ -4,6 +4,6 @@
 <div class="container-flex container-db-vide" style='display:none'>
   Votre recherche n'a retourné aucun résultat
 </div>
-<div class="container-flex container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %>>
+<div class="container-flex container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %> data-search= <%= @search %> data-number = <%= @database_page.count %> style='display: none'>
   <%= image_tag('gif-loading.gif') %>
 </div>
