--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -46,7 +46,8 @@
         Les sous-traitants
       </h3>
       <div class="col-md-10 offset-md-1">
-        <div id="react-render-subcontractors" data-admin=<%= "#{current_user.admin}" %> data-ppsps_id=<%="#{@ppsp.id}"%>></div>
+        <% csrf_token = form_authenticity_token %>
+        <%= react_component("form-subcontractors/components/App", {token: csrf_token}, {id: 'react-render-subcontractors', 'data-ppsps_id': @ppsp.id, 'data-admin': current_user.admin}) %>
       </div>
 
       <h3 class="col-12 form-subtitle">
