--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -97,16 +97,30 @@
   .form-flex {
     flex-direction: column;
   }
+  .form-flex-element {
+    width: 100%;
+  }
+}
+
+.selected-form-check {
+  overflow: auto;
+  height: 300px;
 }
 
 .form-flex-element {
   min-width: 300px;
   margin: 20px;
+  width: 50px;
   box-shadow: 1px 1px 2px 2px $blue-shadow;
   padding: 8px;
   border-radius: 12px;
-  height: fit-content;
-  height: 300px;
-  overflow: auto;
   margin: 30px auto;
+  .title {
+    border-bottom: solid 1px gray;
+    margin-bottom: 0.4em;
+  }
+  fieldset {
+    overflow: auto;
+    height: 300px;
+  }
 }
