--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -399,4 +399,9 @@
     font-weight: 600;
     text-align: center;
   }
+  .card-vehicule-subtitle {
+    font-weight: 500;
+    text-align: center;
+    font-style: italic;
+  }
 }
