--- a/app/views/workers/_elements.html.erb
+++ b/app/views/workers/_elements.html.erb
@@ -3,14 +3,15 @@
     <div class="front">
       <div class="card-bdd-container">
         <div class="text-center"><%= "#{worker.first_name} #{worker.last_name}" %></div>
-        <div class="text-center"><%= worker.lifesaver ? '<i class="fas fa-check text-success"></i>'.html_safe : '<i class="fas fa-times text-danger"></i>'.html_safe%> Sauveteur</div>
-        <div class="text-center"><%= worker.conductor ? '<i class="fas fa-check text-success"></i>'.html_safe : '<i class="fas fa-times text-danger"></i>'.html_safe%> Conduteur</div>
+        <div class="line"><i class="fas fa-hard-hat"></i><%= worker.role %></div>
       </div>
     </div>
     <div class="back">
       <div class="card-bdd-container">
+        <div class="text-center"><%= worker.lifesaver ? '<i class="fas fa-check text-success"></i>'.html_safe : '<i class="fas fa-times text-danger"></i>'.html_safe%> Sauveteur</div>
+        <div class="text-center"><%= worker.conductor ? '<i class="fas fa-check text-success"></i>'.html_safe : '<i class="fas fa-times text-danger"></i>'.html_safe%> Conduteur</div>
         <div class="card-db-action">
-          <%= link_to edit_worker_path(worker), class: "card-db-edit", target: '_blank' do %>
+          <%= link_to edit_worker_path(worker), class: "card-db-edit" do %>
             <i class='fas fa-pencil-alt'></i>
           <% end %>
           <%= link_to "x", destroy_worker_path(worker), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
