--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -32,8 +32,8 @@
 .form-subtitle {
   font-size: 20px;
   font-weight: 500;
-  text-align: center;
-  margin: 2em 0;
+  margin-top: 1.5em;
+  text-align: left;
 }
 
 .form-react-conductors {
@@ -123,4 +123,33 @@
     overflow: auto;
     height: 300px;
   }
+}
+
+// Checkbox Personalisée
+input[type='checkbox'].checkbox-visual + label {
+  box-sizing: border-box;
+  display: inline-block;
+  content: '';
+  width: 3rem;
+  height: 1.5rem;
+  border-radius: 1.5rem;
+  padding: 2px;
+  background-color: #c0ceda;
+  transition: all 0.5s;
+}
+input[type='checkbox'].checkbox-visual + label::before {
+  box-sizing: border-box;
+  display: block;
+  content: '';
+  height: calc(1.5rem - 4px);
+  width: calc(1.5rem - 4px);
+  border-radius: 50%;
+  background-color: #fff;
+  transition: all 0.5s;
+}
+input[type='checkbox'].checkbox-visual:checked + label {
+  background-color: $orange;
+}
+input[type='checkbox'].checkbox-visual:checked + label::before {
+  margin-left: 1.5rem;
 }
