--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -48,17 +48,13 @@
       <%= image_tag 'logo-doctor.svg', width: 50, height: 50  %>
       <p>Médecine du travail</p>
     <% end %>
-    <%= link_to workers_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "work_mdedecine" do %>
-      <%= image_tag 'logo-doctor.svg', width: 50, height: 50  %>
+    <%= link_to workers_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "compagnon" do %>
+      <%= image_tag 'logo-compagnon.svg', width: 50, height: 50  %>
       <p>Compagnons</p>
     <% end %>
     <%= link_to subcontractors_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "subcontractors" do %>
-      <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
+      <%= image_tag 'logo-subcontractor.svg', width: 50, height: 50  %>
       <p>Sous-Traitants</p>
-    <% end %>
-    <%= link_to risks_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "subcontractors" do %>
-      <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
-      <p>Types de travaux</p>
     <% end %>
   </div>
 </div>
