--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -136,6 +136,9 @@ input[type='checkbox'].checkbox-visual + label {
   padding: 2px;
   background-color: #c0ceda;
   transition: all 0.5s;
+  &:hover {
+    cursor: pointer;
+  }
 }
 input[type='checkbox'].checkbox-visual + label::before {
   box-sizing: border-box;
